--- a/styles/components/homepage/SectionTwo.module.scss
+++ b/styles/components/homepage/SectionTwo.module.scss
@@ -1,6 +1,58 @@
 .section {
+  position: relative;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.comb {
+  position: absolute;
+  top: 0;
+  top: -40vh;
+  right: -30vw;
+  border-inline: 5px solid var(--color-b);
+  width: 34.64vw;
+  height: 20vw;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -5px;
+    border-inline: 5px solid var(--color-b);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    transform: rotate(60deg);
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -5px;
+    border-inline: 5px solid var(--color-b);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    transform: rotate(-60deg);
+  }
+  & svg {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 5%;
+    margin: auto;
+    width: 20%;
+    height: auto;
+    color: var(--color-y);
+  }
+}
+
+.title {
+  font-family: "Quicksand-Bold";
+  font-size: 5vw;
+  & span {
+    color: var(--color-y);
+  }
 }
